deps/v8/test/message/yield-in-generator-param.out
*%(basename)s:5: SyntaxError: Yield expression not allowed in formal parameter
function* g(a = yield) {}
                ^^^^^
SyntaxError: Yield expression not allowed in formal parameter
